apps/web/umami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami

    spec:
      containers:
        - name: umami
          image: ghcr.io/umami-software/umami:postgresql-latest
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "6000m"
          ports:
            - name: umami
              containerPort: 3000
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
      imagePullSecrets:
      - name: ghcr-login-secret
