apps/web/umami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
spec:
  selector:
    app: umami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
